--- a/style/style.css
+++ b/style/style.css
@@ -34,3 +34,10 @@ nav {
 .active {
   color: #2af020 !important;
 }
+
+@media screen and (max-width: 300px) {
+  .image {
+    height: 100vh;
+    width: 50vw;
+  }
+}
